# server/src/http/openapi.rs
@@ -6,9 +6,13 @@ use super::{
         RecommendationData, RecommendationEnvelope, RecommendationItemData,
     },
     activity::{
-        __path_create, __path_get as __path_activity_get, __path_list as __path_activity_list,
-        __path_list_members, ActivityData, ActivityEnvelope, ActivityListEnvelope,
-        ActivityMemberData, ActivityMemberListEnvelope, CreateActivityRequest,
+        __path_create, __path_delete as __path_activity_delete, __path_get as __path_activity_get,
+        __path_list as __path_activity_list, __path_list_members,
+        __path_restore as __path_activity_restore, __path_transition as __path_activity_transition,
+        __path_update as __path_activity_update, ActivityData, ActivityEnvelope,
+        ActivityFieldPermissionsData, ActivityLifecycleRequest, ActivityListEnvelope,
+        ActivityMemberData, ActivityMemberListEnvelope, ActivityUpdateEnvelope,
+        ActivityVersionRequest, CreateActivityRequest, UpdateActivityRequest,
     },
     auth::{
         __path_change_password, __path_csrf, __path_login, __path_logout, __path_register,
@@ -57,6 +61,10 @@ use super::{
         create,
         activity_list,
         activity_get,
+        activity_update,
+        activity_delete,
+        activity_transition,
+        activity_restore,
         list_members,
         create_guest,
         create_invitation,
@@ -98,8 +106,13 @@ use super::{
         ChangePasswordData,
         ChangePasswordEnvelope,
         CreateActivityRequest,
+        UpdateActivityRequest,
+        ActivityLifecycleRequest,
+        ActivityVersionRequest,
         ActivityData,
+        ActivityFieldPermissionsData,
         ActivityEnvelope,
+        ActivityUpdateEnvelope,
         ActivityListEnvelope,
         ActivityMemberData,
         ActivityMemberListEnvelope,
